--- a/index.html
+++ b/index.html
@@ -18,14 +18,128 @@
                 Debit
             </div>
         </div>
+
         <div class="leftOver">
-            LeftOver
+            <div class="leftOverScreen">
+                LeftOver
+            </div>
         </div>
+
         <div class="credits">
-            Credit
+            <div class="creditsScreen">
+                Credit
+            </div>
         </div>
+
         <div class="calendarLayout">
             Calendar
+            <section class="calendar">
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        1
+                    </div>
+                    <div class="calendarDays">
+                        2
+                    </div>
+                    <div class="calendarDays">
+                        3
+                    </div>
+                    <div class="calendarDays">
+                        4
+                    </div>
+                    <div class="calendarDays">
+                        5
+                    </div>
+                    <div class="calendarDays">
+                        6
+                    </div>
+                </div>
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        7
+                    </div>
+                    <div class="calendarDays">
+                        8
+                    </div>
+                    <div class="calendarDays">
+                        9
+                    </div>
+                    <div class="calendarDays">
+                        10
+                    </div>
+                    <div class="calendarDays">
+                        11
+                    </div>
+                    <div class="calendarDays">
+                        12
+                    </div>
+                </div>
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        13
+                    </div>
+                    <div class="calendarDays">
+                        14
+                    </div>
+                    <div class="calendarDays">
+                        15
+                    </div>
+                    <div class="calendarDays">
+                        16
+                    </div>
+                    <div class="calendarDays">
+                        17
+                    </div>
+                    <div class="calendarDays">
+                        18
+                    </div>
+                </div>
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        19
+                    </div>
+                    <div class="calendarDays">
+                        20
+                    </div>
+                    <div class="calendarDays">
+                        21
+                    </div>
+                    <div class="calendarDays">
+                        22
+                    </div>
+                    <div class="calendarDays">
+                        23
+                    </div>
+                    <div class="calendarDays">
+                        24
+                    </div>
+                </div>
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        25
+                    </div>
+                    <div class="calendarDays">
+                        26
+                    </div>
+                    <div class="calendarDays">
+                        27
+                    </div>
+                    <div class="calendarDays">
+                        28
+                    </div>
+                    <div class="calendarDays">
+                        29
+                    </div>
+                    <div class="calendarDays">
+                        30
+                    </div>
+                </div>
+                <div class="calendarRows">
+                    <div class="calendarDays">
+                        31
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
     
